@@ -1,26 +1,50 @@
+package edu.upc.prop.clusterxx;
 import java.util.ArrayList;
 
+/**
+ * Classe 'AlgorismeBT'
+ *
+ * Algorisme de força bruta que troba la solució òptima mitjançant una estratègia de backtracking.
+ * Aquesta classe utilitza una matriu de similituds per determinar les relacions entre els productes.
+ *
+ * @see Algorisme
+ *
+ * @author Efrain Tito Cortés
+ * @version 2,0
+ *
+ * <p><b>Informació:</b></p>
+ * Per al mètode 'solucionar', cal passar com a paràmetre una matriu de similituds, on l'element
+ * [i][j] representa la similitud entre el producte amb índex de catàleg 'i' i el producte amb índex de catàleg 'j'.
+ */
 public class AlgorismeBT extends Algorisme {
 
     /**
+     * Constructor de la classe AlgorismeBT
+     */
+    public AlgorismeBT() {
+
+    }
+
+    /**
      * Mètode principal per trobar la configuració òptima de la prestatgeria.
-     * @param cataleg El catàleg de productes a analitzar
-     * @return Un vector d'índexs de productes al catàleg que representa la millor configuració trobada
+     * @param matriuSimilituds Matriu de similituds entre productes, on matriuSimilituds[i][j] és la similitud entre els productes i i j.
+     * @return Un vector d'índexs de productes al catàleg que representa la millor configuració trobada.
      */
     @Override
-    public int[] resoldre(Cataleg cataleg) {
-        ArrayList<Integer> configuracioActual = new ArrayList<>();
-        boolean[] visitats = new boolean[cataleg.num_prod_act()];
-        int[] millorConfiguracio = new int[cataleg.num_prod_act()];
+    public int[] solucionar(double[][] matriuSimilituds) {
 
-        backtrack(cataleg, configuracioActual, visitats, 0.0, millorConfiguracio, 0.0);
+        ArrayList<Integer> configuracioActual = new ArrayList<>();
+        boolean[] visitats = new boolean[matriuSimilituds.length];
+        int[] millorConfiguracio = new int[matriuSimilituds.length];
+
+        backtrack(matriuSimilituds, configuracioActual, visitats, 0.0, millorConfiguracio, 0.0);
 
         return millorConfiguracio;
     }
 
     /**
-     * Mètode recursiu per explorar totes les configuracions possibles.
-     * @param cataleg Catàleg de productes per calcular les similituds.
+     * Mètode recursiu per calcular totes les configuracions possibles.
+     * @param matriuSimilituds Matriu de similituds entre productes.
      * @param configuracioActual Configuració actual d'índexs de productes.
      * @param visitats Vector de seguiment per evitar repetir productes.
      * @param similitudAcumulada Similitud total acumulada fins al punt actual de la configuració.
@@ -28,14 +52,15 @@ public class AlgorismeBT extends Algorisme {
      * @param maxSimilitud La màxima similitud trobada fins ara.
      * @return El màxim de similitud trobat fins al moment per la configuració actual.
      */
-    private double backtrack(Cataleg cataleg, ArrayList<Integer> configuracioActual, boolean[] visitats, double similitudAcumulada, int[] millorConfiguracio, double maxSimilitud) {
-        int numProd = cataleg.num_prod_act();
+    private double backtrack(double[][] matriuSimilituds, ArrayList<Integer> configuracioActual, boolean[] visitats, double similitudAcumulada, int[] millorConfiguracio, double maxSimilitud) {
+        int numProd = matriuSimilituds.length;
 
+        //comprovem si la configuració actual està completa
         if (configuracioActual.size() == numProd) {
-            //Sumem la similitud entre el primer i l'últim
-            int primerIndex = configuracioActual.get(0);
-            int ultimIndex = configuracioActual.get(configuracioActual.size() - 1);
-            double similitudTotal = similitudAcumulada + cataleg.consultar_similitud_index(primerIndex, ultimIndex);
+            //sumem la similitud entre el primer i l'últim producte
+            int primerIndex = configuracioActual.getFirst();
+            int ultimIndex = configuracioActual.getLast();
+            double similitudTotal = similitudAcumulada + matriuSimilituds[primerIndex][ultimIndex];
 
             if (similitudTotal > maxSimilitud) {
                 maxSimilitud = similitudTotal;
@@ -51,17 +76,17 @@ public class AlgorismeBT extends Algorisme {
                 visitats[i] = true;
                 configuracioActual.add(i);
 
-                //Si no és el primer producte, afegim la similitud amb l'anterior
+                //si no és el primer, afegim la similitud amb l'anterior
                 double novaSimilitudAcumulada = similitudAcumulada;
                 if (configuracioActual.size() > 1) {
                     int anteriorIndex = configuracioActual.get(configuracioActual.size() - 2);
-                    int actualIndex = configuracioActual.get(configuracioActual.size() - 1);
-                    novaSimilitudAcumulada += cataleg.consultar_similitud_index(anteriorIndex, actualIndex);
+                    int actualIndex = configuracioActual.getLast();
+                    novaSimilitudAcumulada += matriuSimilituds[anteriorIndex][actualIndex];
                 }
 
-                maxSimilitud = backtrack(cataleg, configuracioActual, visitats, novaSimilitudAcumulada, millorConfiguracio, maxSimilitud);
+                maxSimilitud = backtrack(matriuSimilituds, configuracioActual, visitats, novaSimilitudAcumulada, millorConfiguracio, maxSimilitud);
 
-                configuracioActual.remove(configuracioActual.size() - 1);
+                configuracioActual.removeLast();
                 visitats[i] = false;
             }
         }
@@ -69,6 +94,7 @@ public class AlgorismeBT extends Algorisme {
         return maxSimilitud;
     }
 }
+
 
 
 
